--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -75,6 +75,7 @@
             android:text="@string/detail_rating"
             android:textColor="@color/logo_orange"
             android:textStyle="bold|italic"
+            android:background="@color/header_popular_background"
             android:letterSpacing="0.1"
             app:layout_constraintLeft_toRightOf="@+id/imageViewOnesheet"
             app:layout_constraintTop_toTopOf="@+id/imageViewOnesheet" />
@@ -110,6 +111,7 @@
             android:text="@string/detail_runtime"
             android:textColor="@color/logo_orange"
             android:textStyle="bold|italic"
+            android:background="@color/header_popular_background"
             android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/textViewRating"
             app:layout_constraintTop_toBottomOf="@+id/textViewRating" />
@@ -132,6 +134,7 @@
             android:text="@string/detail_release"
             android:textColor="@color/logo_orange"
             android:textStyle="bold|italic"
+            android:background="@color/header_popular_background"
             android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/textViewRuntime"
             app:layout_constraintTop_toBottomOf="@+id/textViewRuntime" />
@@ -155,6 +158,7 @@
             android:textAllCaps="false"
             android:textColor="@color/logo_orange"
             android:textStyle="bold|italic"
+            android:background="@color/header_popular_background"
             android:letterSpacing="0.1"
             app:layout_constraintLeft_toLeftOf="@+id/imageViewOnesheet"
             app:layout_constraintTop_toBottomOf="@+id/imageViewOnesheet" />
