--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -4,11 +4,13 @@
     <array name="pref_sort_option_labels">
         <item>@string/pref_sort_popular_label</item>
         <item>@string/pref_sort_top_rated_label</item>
+        <item>@string/pref_sort_favorite_label</item>
     </array>
 
     <array name="pref_sort_option_values">
         <item>@string/pref_sort_popular_value</item>
         <item>@string/pref_sort_top_rated_value</item>
+        <item>@string/pref_sort_favorite_value</item>
     </array>
 
 </resources>
