--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         />
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/c_lyo_no_favorites"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/no_favorites_gradient"
@@ -34,23 +35,25 @@
         >
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/purple_found"
-            app:layout_constraintTop_toBottomOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="2dp"
+            android:padding="0dp"
+            android:visibility="visible"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@color/purple_found" />
+
 
         <TextView
             android:id="@+id/tv_no_favorite_wow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            tools:text="Wow,"
+            android:text="Wow,"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@color/white_translucent"
-            android:letterSpacing="0.1"
+            android:letterSpacing="0.03"
             app:layout_constraintBottom_toTopOf="@+id/tv_no_favorite_empty"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -62,10 +65,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            tools:text="it's pretty empty in here..."
+            android:text="it's pretty empty in here..."
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textColor="@color/white_translucent"
-            android:letterSpacing="0.1"
+            android:letterSpacing="0.03"
             app:layout_constraintTop_toBottomOf="@+id/tv_no_favorite_wow"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -78,9 +81,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            tools:text="Fill it with your favorite movies!"
+            android:text="Fill it with your favorite movies!"
             android:textColor="@color/white_translucent"
-            android:letterSpacing="0.1"
+            android:letterSpacing="0.03"
             app:layout_constraintTop_toBottomOf="@+id/tv_no_favorite_empty"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -92,14 +95,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:letterSpacing="0.1"
+            android:letterSpacing="0.05"
             android:textColor="@color/white_translucent"
             android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_no_favorite_fill_up"
-            tools:text="*Click the heart on a movie poster to favorite it." />
+            android:text="*Click the heart on a movie poster to favorite it." />
 
 
 
